name:                blueprint
version:             0.1.0.0
synopsis:            GraphQL stuff
description:         Please see README.md
homepage:            http://github.com/ChristopherBiscardi/blueprint#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Biscardi
maintainer:          chris@christopherbiscardi.com
copyright:           2016 Chris Biscardi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blueprint
                     , Blueprint.Parser
                     , Blueprint.AST
                     , Blueprint.GraphQL
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.0
                     , trifecta >= 1.5.2
                     , parsers >= 0.12.3
  default-language:    Haskell2010

executable blueprint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blueprint
  default-language:    Haskell2010

test-suite blueprint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blueprint
                     , tasty == 0.11.0.2
                     , tasty-hspec
                     , tasty-quickcheck
                     , trifecta
                     , hspec-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChristopherBiscardi/blueprint
