name:                blueprint
version:             0.1.0.0
synopsis:            GraphQL stuff
description:         Please see README.md
homepage:            http://github.com/ChristopherBiscardi/blueprint#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Biscardi
maintainer:          chris@christopherbiscardi.com
copyright:           2016 Chris Biscardi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blueprint
                     , Blueprint.Parser
                     , Blueprint.AST
                     , Blueprint.GraphQL
                     , Blueprint.FreeHaxl
                     , Blueprint.Schema
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.0
                     , trifecta >= 1.5.2
                     , parsers >= 0.12.3
                     , containers
                     , aeson
                       -- haxl
                     , hashable
                     , haxl
                     , async
                     , conduit
                     , resourcet
                     , http-conduit
                     , http-client-tls
                     , fb
                     , template-haskell
                     , lens
  default-language:    Haskell2010

executable blueprint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , blueprint
  default-language:    Haskell2010

test-suite blueprint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  additional-modules:
                       SchemaParser
  build-depends:       base
                     , blueprint
                     , containers
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
                     , trifecta
                     , hspec-core
                     , ansi-wl-pprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChristopherBiscardi/blueprint
